changed the name of paragraph and tab

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 	<head>
 		<meta charset = "utf-8" />
+		<title>Test</title>>
 	</head>
 	<body>
-		<p>HELLO WORLD!!!</p>
+		<p>Test Task for iOS school</p>
 		<script src="sputnikV.js"></script>
 	</body>
 </html>
